# jamscepticeye-2025

./: Cargo.toml  shell.nix
src/: animal.rs  assets.rs  camera_module.rs  common.rs  debug_scene.rs  environment.rs  macros.rs  main.rs  model_previewer.rs  player_controls.rs  tree.rs
src/assets/: hoppy_cube.rs
src/example/: mod.rs
