[package]
name = "jamscepticeye-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "x11",  # needed cause linux
    "bevy_winit",  # wind'oh
    "bevy_render",  # rendering
    "bevy_pbr",  # PBR
] }
fastrand = "2.3.0"
rodio = "0.21.1"
modwire = "*"
thiserror = "*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
